--- a/config.json
+++ b/config.json
@@ -16,13 +16,13 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "Your-Father",
-    "PREFIX": "/",
+    "BOTNAME": "𝐌𝐨𝐓𝐔 𝐁𝐚𝐁𝐔",
+    "PREFIX": ".",
     "ADMINBOT": [
-        "100037743553265"
+        "100019001131772"
     ],
     "NDH": [
-        "100037743553265"
+        "100019001131772"
     ],
     "DATABASE": {
         "sqlite": {
