--- a/appstate.json
+++ b/appstate.json
@@ -1,1 +1,119 @@
-
+[
+    {
+        "key": "dbln",
+        "value": "%7B%22100093147962099%22%3A%22tNhH6evZ%22%2C%22100018024551910%22%3A%22YyX0zMAF%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2025-04-05T15:15:59.623Z",
+        "lastAccessed": "2025-04-05T15:15:59.623Z"
+    },
+    {
+        "key": "datr",
+        "value": "0zvgZ5JXPF9c3fH5aKpBzz8Z",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-05T15:15:59.623Z",
+        "lastAccessed": "2025-04-05T15:15:59.623Z"
+    },
+    {
+        "key": "sb",
+        "value": "0zvgZxMv31dwmUow49Q5jSH1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-05T15:15:59.623Z",
+        "lastAccessed": "2025-04-05T15:15:59.623Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B809x412x2.625",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-05T15:15:59.623Z",
+        "lastAccessed": "2025-04-05T15:15:59.623Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-05T15:15:59.623Z",
+        "lastAccessed": "2025-04-05T15:15:59.623Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-05T15:15:59.623Z",
+        "lastAccessed": "2025-04-05T15:15:59.623Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_US",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-05T15:15:59.623Z",
+        "lastAccessed": "2025-04-05T15:15:59.623Z"
+    },
+    {
+        "key": "c_user",
+        "value": "100050636850643",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-05T15:15:59.623Z",
+        "lastAccessed": "2025-04-05T15:15:59.623Z"
+    },
+    {
+        "key": "fr",
+        "value": "0yYbV5NWXf8G32TzE.AWchvK-NRl1Q6hY4OHVOow81CS4TH1w7OP00hDYxRe927HIvaAs.Bn4DvT..AAA.0.0.Bn8FzO.AWfWRBSKyg5-zwTcEpuuyylH-vQ",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-05T15:15:59.623Z",
+        "lastAccessed": "2025-04-05T15:15:59.623Z"
+    },
+    {
+        "key": "xs",
+        "value": "41%3Akfkmmw_jcveyFg%3A2%3A1743805647%3A-1%3A4703",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-05T15:15:59.623Z",
+        "lastAccessed": "2025-04-05T15:15:59.623Z"
+    },
+    {
+        "key": "wd",
+        "value": "412x809",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-05T15:15:59.623Z",
+        "lastAccessed": "2025-04-05T15:15:59.623Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2776%3Btimestamp%3A1743866153",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-05T15:15:59.623Z",
+        "lastAccessed": "2025-04-05T15:15:59.623Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "100729291%3BT%3A29064435",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-05T15:15:59.623Z",
+        "lastAccessed": "2025-04-05T15:15:59.623Z"
+    }
+]
